<resources>
    <string name="app_name">GroupAssessmentProject</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="bkgimage">bkgimage</string>
    <string name="fitness_app">FITNESS APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirem_new_password">Confirem new password</string>
    <string name="save">SAVE</string>
    <string name="edit_username">Edit username</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_main_custionario">MainCustionario</string>

    <string-array name="objetivo">
        <item>Ganar masa muscular</item>
        <item>Perder peso</item>
        <item>Mantener peso</item>
    </string-array>

    <string-array name="sexosItems">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string-array name="Planes">
        <item>Recomendación de alto rendimiento</item>
        <item>Recomendación equilibrada</item>
        <item>Recomendación de mantenimiento o impacto bajo</item>
    </string-array>
</resources>