<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/darkBlueBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignInActivity">

    <TextView
        android:id="@+id/tvWelcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <ImageButton
        android:id="@+id/ivBackground"
        android:layout_width="355dp"
        android:layout_height="456dp"
        android:alpha="0.3"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/bkgimage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/icon_background"
        tools:ignore="PrivateResource,ImageContrastCheck" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="50dp">

                <EditText
                    android:id="@+id/etEditPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_text_style"
                    android:ems="10"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEditUsername"
                    app:layout_constraintVertical_bias="0.169"
                    tools:ignore="LabelFor,TextFields" />

                <EditText
                    android:id="@+id/etConfirmEditPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_text_style"
                    android:ems="10"
                    android:hint="@string/confirem_new_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEditUsername"
                    app:layout_constraintVertical_bias="0.32"
                    tools:ignore="LabelFor,TextFields" />

                <EditText
                    android:id="@+id/etEditUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_text_style"
                    android:ems="10"
                    android:hint="@string/edit_username"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.326"
                    tools:ignore="LabelFor,TextContrastCheck" />

                <Button
                    android:id="@+id/btnSaveData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:text="@string/save"
                    android:tint="@null" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>


    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitness_app"
        app:layout_constraintBottom_toTopOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <TextView
        android:id="@+id/tvAlertMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

</androidx.constraintlayout.widget.ConstraintLayout>